updated documentation for day spin button and fixed bug realted to aria-valuetext for year spinbutton

--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -255,10 +255,11 @@
           </tr>
           <tr data-test-id="spinbutton-aria-valuetext">
             <td></td>
-            <th scope="row"><code>aria-valuetext="<em>month</em>"</code></th>
+            <th scope="row"><code>aria-valuetext="<em>date</em> or <em>month</em>"</code></th>
             <td><code>div</code></td>
             <td>
               <ul>
+                <li>For the day spin button value text is provides a more date friendly pronunciation of the date (i.e. "first" instead of "one")</li>
                 <li>For the month spin button provides a more user friendly announcement of the current month for screen reader users.</li>
                 <li>As users adjust the value, instead of hearing only a number, they will hear the current month.</li>
               </ul>
