updated link to provide feedback on the pull request

--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -31,7 +31,7 @@
     <p>
       <strong>NOTE:</strong> This example page is work in progress.
       Please provide feedback in
-      <a href="https://github.com/w3c/aria-practices/issues/34">issue 34.</a>
+      <a href="https://github.com/w3c/aria-practices/pull/1053">pull requset 1053.</a>
     </p>
     <p>
       The date picker is an example of the <a href="../../#spinbutton"><code>Spin Button</code> design pattern</a> to define a date.
