--- a/examples/dialog-modal/datepicker-dialog.html
+++ b/examples/dialog-modal/datepicker-dialog.html
@@ -76,12 +76,12 @@
           <div class="header">
 
             <button class="prevYear"
-              aria-label="previous year"
+              aria-label="previous year">
               <span class="fas fa-angle-double-left fa-lg"></span>
             </button>
 
             <button class="prevMonth"
-              aria-label="previous month"
+              aria-label="previous month">
               <span class="fas fa-angle-left fa-lg"></span>
             </button>
 
@@ -92,12 +92,12 @@
             </h2>
 
             <button class="nextMonth"
-              aria-label="next month"
+              aria-label="next month">
               <span class="fas fa-angle-right fa-lg"></span>
             </button>
 
             <button class="nextYear"
-              aria-label="next year"
+              aria-label="next year">
               <span class="fas fa-angle-double-right fa-lg"></span>
             </button>
           </div>
