fixed test for date picker spin button

--- a/examples/spinbutton/datepicker-spinbuttons.html
+++ b/examples/spinbutton/datepicker-spinbuttons.html
@@ -118,10 +118,7 @@
                   aria-valuemin="2019"
                   aria-valuemax="2040"
                   aria-label="Year">2019</div>
-          <div class="next"
-                role="button"
-                tabindex="-1"
-                aria-label="next year">2020</div>
+          <div class="next" aria-hidden="true">2020</div>
           <button class="increase"
                 tabindex="-1"
                 aria-label="next year">
